@@ -79,13 +79,13 @@ ipps     Same as ipps
 .br
 opps     Sort according to out packets per second
 .br
-bps      Sort according to (in)bytes per second
+bps      Sort according to (in)bits per second
 .br
 ibps     Same as bps
 .br
 obps     Sort according to output bytes per second
 .br
-bpp      Sort according to (in)bytes per packet
+Bpp      Sort according to (in)bytes per packet
 .br
 ibpp     Same as bpp
 .br
